Bug 503784 - Messages that the users sends that are pending show aren't aligned correctly
Summary: Messages that the users sends that are pending show aren't aligned correctly
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-04 23:57 UTC by Justin Zobel
Modified: 2025-05-11 10:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (4.21 KB, image/png)
2025-05-04 23:57 UTC, Justin Zobel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2025-05-04 23:57:25 UTC
Created attachment 180942 [details]
Screenshot

SUMMARY
When the user sends a message but it is pending confirmed received on the server, they sit too far right meaning one of the buttons is inaccessible and the three dots are cut off and not able to be clicked either.

STEPS TO REPRODUCE
1. Send a message
2. Have the user's homeserver be delayed in acknowledging receipt of the message

OBSERVED RESULT
As seen in screenshot

EXPECTED RESULT
Buttons accessible

NeoChat: 25.07.70
KDE Flatpak runtime (Wayland)
libQuotient: 0.10.0 (built against 0.10.0)
KDE Frameworks: 6.13.0
Qt: Using 6.8.3 and built against 6.8.3
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.14.4-arch1-1
Comment 1 James Graham 2025-05-11 10:11:56 UTC
Git commit 101a8b9ec3cd82cf55c45c76a873ae86bee19152 by James Graham.
Committed on 11/05/2025 at 10:11.
Pushed by nvrwhere into branch 'master'.

Yeet HoverActions into the sun

Replace HoverActions with an inline action component that appears on hover. There are only actions for reply and react if there is space the overflow button opens the normal message menu.

NOTE: the most recent update changes things slightly, from the images below the buttons are now top aligned because of potentially hige messages. The actions are also now disabled for compact mode as they never really made sense there anyway. The menu now has all options so no one is missing out.

For normal messages

![image](/uploads/b8679eb09c9190404fc84f01e14169af/image.png){width=419 height=138}

When space is limited

![image](/uploads/ecd7c725ea2526689e586a2d786f389e/image.png){width=411 height=130}

User messages

![image](/uploads/767ef09f6650a5fb6abf3a49ef9f9b90/image.png){width=296 height=114}

M  +1    -1    snapcraft.yaml
M  +33   -0    src/libneochat/neochatroom.cpp
M  +11   -0    src/libneochat/neochatroom.h
M  +1    -1    src/timeline/CMakeLists.txt
M  +13   -0    src/timeline/DelegateContextMenu.qml
D  +0    -181  src/timeline/HoverActions.qml
M  +3    -25   src/timeline/MessageDelegate.qml
M  +2    -0    src/timeline/MessageDelegateContextMenu.qml
A  +90   -0    src/timeline/QuickActions.qml     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
M  +0    -12   src/timeline/TimelineView.qml
M  +69   -2    src/timeline/messagedelegate.cpp
M  +16   -0    src/timeline/messagedelegate.h

https://invent.kde.org/network/neochat/-/commit/101a8b9ec3cd82cf55c45c76a873ae86bee19152